# modern_visualization_engine

./: .gitignore  README.md  main.py  proba_vision_engine.py  pyproject.toml  setup.py  test_vision_engine.py
vision_engine/: __init__.py
vision_engine/application/: __init__.py  plotter.py  visualizer.py
vision_engine/engine/: __init__.py  data_pipeline.py  layout_manager.py  scene_manager.py
vision_engine/render/: __init__.py  display_backend.py  renderer.py  shader_manager.py  vulkan_backend.py  webgpu_backend.py
vision_engine/utils/: __init__.py  config.py  logger.py
